--- a/episodes/season_16.yml
+++ b/episodes/season_16.yml
@@ -6,6 +6,7 @@ episodes:
   description: On Halloween... Flanders can predict when people will die; in Victorian
     London, Lisa and Bart hunt for a killer; the Simpsons take a fantastic voyage
     after Mr. Burns swallows a miniaturized Maggie.
+  disneyplus_id:
   simpsonsworld_id: 256741955834
   good: true
   characters:
@@ -16,6 +17,7 @@ episodes:
   description: Marge enters a bakeoff competition, but ends up sabotaging the other
     entries; Bart decides to live the life of a swinger after discovering Playdude
     magazine.
+  disneyplus_id:
   simpsonsworld_id: 257840195722
   good: false
   characters:
@@ -27,6 +29,7 @@ episodes:
   description: Lisa becomes self-conscious about her weight after kids at school make
     fun of her posterior;  Marge takes bully Nelson Muntz under her wing ... much
     to Bart's horror.
+  disneyplus_id:
   simpsonsworld_id: 256764995911
   good: false
   characters:
@@ -40,6 +43,7 @@ episodes:
   description: Marge wonders if she made the right choices in life after she encounters
     a successful high school classmate who has traveled the world as a television
     news reporter.
+  disneyplus_id:
   simpsonsworld_id: 256753731544
   good: maybe
   characters:
@@ -48,6 +52,7 @@ episodes:
   episode: 5
   description: Homer builds a nuclear reactor for Lisa's science project; Bart makes
     money creating his own line of t-shirts.
+  disneyplus_id:
   simpsonsworld_id: 256759363799
   good: false
   characters:
@@ -59,6 +64,7 @@ episodes:
   episode: 6
   description: Homer and Grampa smuggle drugs out of Canada after Mr. Burns terminates
     his company's employee prescription drug program.
+  disneyplus_id:
   simpsonsworld_id: 1094235715818
   good: maybe
   characters:
@@ -68,6 +74,7 @@ episodes:
   description: Homer mortgages his house to save Moe's bar, but Marge ends up taking
     control of the business and spends so much time with Moe that Homer fears his
     marriage is in trouble.
+  disneyplus_id:
   simpsonsworld_id: 256807491582
   good: maybe
   characters:
@@ -77,6 +84,7 @@ episodes:
   description: After teaching famous athletes some victory dance moves, Homer is chosen
     to produce the Super Bowl half-time show; Flanders makes a movie featuring violent
     reenactments of biblical events.
+  disneyplus_id:
   simpsonsworld_id: 256813635887
   good: maybe
   characters:
@@ -85,6 +93,7 @@ episodes:
   episode: 9
   description: After sneaking off to a rap concert, Bart fakes his own kidnapping
     and inadvertently implicates Milhouse's father in the 'crime.'
+  disneyplus_id:
   simpsonsworld_id: 256798275935
   good: maybe
   characters:
@@ -94,6 +103,7 @@ episodes:
   description: When tourists shun Springfield, the town legalizes gay marriage in
     hopes of reversing the dire economic slowdown - and Homer makes money by becoming
     an ordained minister.
+  disneyplus_id:
   simpsonsworld_id: 256822339660
   good: maybe
   characters:
@@ -102,6 +112,7 @@ episodes:
   episode: 11
   description: After Bart torments his sister during a school field trip, Lisa gets
     a restraining order; Homer takes a job as a greeter at a local mega-store.
+  disneyplus_id:
   simpsonsworld_id: 256825923849
   good: maybe
   characters:
@@ -110,6 +121,7 @@ episodes:
   episode: 12
   description: Homer pretends to be Selma's husband when Selma travels to China to
     adopt a baby.
+  disneyplus_id:
   simpsonsworld_id: 264432707575
   good: maybe
   characters:
@@ -118,6 +130,7 @@ episodes:
   episode: 13
   description: Bart and Lisa attempt to save Homer and Marge's marriage after Homer
     spends the family's savings on a recreational vehicle.
+  disneyplus_id:
   simpsonsworld_id: 264432707841
   good: maybe
   characters:
@@ -126,6 +139,7 @@ episodes:
   episode: 14
   description: Homer becomes a prison snitch after he's convicted of breaking an outdated
     law; Lisa and Bart discover that Snowball II has a secret life.
+  disneyplus_id:
   simpsonsworld_id: 260844611804
   good: maybe
   characters:
@@ -135,6 +149,7 @@ episodes:
   description: Using Professor Frink's astrological projection machine, Bart and Lisa
     peer into the future, where Bart breaks Lisa's heart by taking away her scholarship
     to Yale.
+  disneyplus_id:
   simpsonsworld_id: 260841027999
   good: maybe
   characters:
@@ -144,6 +159,7 @@ episodes:
   description: Homer ends up in a mental institution after Marge grows convinced the
     contractor he befriended is a figment of his imagination; Marge allows Santa's
     Little Helper to stay at Grampa's retirement home.
+  disneyplus_id:
   simpsonsworld_id: 260835395771
   good: maybe
   characters:
@@ -152,6 +168,7 @@ episodes:
   episode: 17
   description: Bart has a heart attack after he becomes addicted to junk food; the
     Simpsons turn the house into a youth hostel, which is soon overrun by German backpackers.
+  disneyplus_id:
   simpsonsworld_id: 264207427808
   good: maybe
   characters:
@@ -160,6 +177,7 @@ episodes:
   episode: 18
   description: Homer behaves like a domineering stage mom after Lisa achieves fame
     by appearing in a singing competition on The Krusty the Clown Show.
+  disneyplus_id:
   simpsonsworld_id: 264212035982
   good: maybe
   characters:
@@ -168,6 +186,7 @@ episodes:
   episode: 19
   description: Homer is declared a prophet after he convinces everyone in town that
     the end of the world is at hand.
+  disneyplus_id:
   simpsonsworld_id: 264217155650
   good: false
   characters:
@@ -178,6 +197,7 @@ episodes:
   description: Flanders feels like a fool after sorority girls run an adult Web site
     from his house without his knowledge, so he and the boys move away from Springfield...
     to a town where everyone looks like a Hummel figurine.
+  disneyplus_id:
   simpsonsworld_id: 264560707993
   good: maybe
   characters:
@@ -186,6 +206,7 @@ episodes:
   episode: 21
   description: After Bart gets expelled, he's enrolled in Catholic school, where he
     befriends a priest who wants to convert him and Homer to Catholicism.
+  disneyplus_id:
   simpsonsworld_id: 264455235845
   good: maybe
   characters:
