--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -5,6 +5,7 @@ episodes:
   episode: 1
   description: Marge hires a life coach to turn Homer around after he becomes convinced
     he's nothing but a loser.
+  disneyplus_id:
   simpsonsworld_id: 292943427892
   good: false
   characters:
@@ -14,6 +15,7 @@ episodes:
   episode: 2
   description: Homer becomes an opera star, only to find himself the target of an
     obsessed fan.
+  disneyplus_id:
   simpsonsworld_id: 350651459856
   good: false
   characters:
@@ -23,6 +25,7 @@ episodes:
   episode: 3
   description: Homer makes enemies when he starts his own tow truck business; Marge
     hires outside help to make Maggie more independent.
+  disneyplus_id:
   simpsonsworld_id: 292968003585
   good: maybe
   characters:
@@ -34,6 +37,7 @@ episodes:
   episode: 4
   description: Marge fears for her safety after breaking a promise to a bank robber
     about visiting him in jail.
+  disneyplus_id:
   simpsonsworld_id: 310455875747
   good: maybe
   characters:
@@ -44,6 +48,7 @@ episodes:
   description: 'In three tales of Halloween terror: Homer and Marge attempt to eliminate
     one another after discovering their secret identities; Bart and Lisa aid Kodos
     the space alien; Flanders uses the seven deadly sins to punish Bart.'
+  disneyplus_id:
   simpsonsworld_id: 302852163741
   good: false
   characters:
@@ -54,6 +59,7 @@ episodes:
   description: When his parents are lost at sea and presumed dead, Milhouse becomes
     cooler than Bart; Homer finds himself in hot water when he can't remember the
     color of Marge's eyes.
+  disneyplus_id:
   simpsonsworld_id: 302855747799
   good: maybe
   characters:
@@ -63,6 +69,7 @@ episodes:
   description: After Marge launches a gym for 'regular women' and becomes a successful
     businessperson, Homer decides to have his stomach stapled so she'll find him more
     attractive.
+  disneyplus_id:
   simpsonsworld_id: 294772803561
   good: maybe
   characters:
@@ -72,6 +79,7 @@ episodes:
   description: After another of his attempts to kill the Simpsons is foiled, Sideshow
     Bob is put on trial.  During the proceedings, Bart accidentally kills his old
     nemesis.
+  disneyplus_id:
   simpsonsworld_id: 310458947589
   good: maybe
   characters:
@@ -81,6 +89,7 @@ episodes:
   description: Homer wakes up from a blackout only to discover that Marge and the
     kids have left him.  Using a variety of methods, he probes his memory to unravel
     the mystery.
+  disneyplus_id:
   simpsonsworld_id: 302847555877
   good: maybe
   characters:
@@ -89,6 +98,7 @@ episodes:
   episode: 10
   description: 'When Springfield becomes the first city in the nation to hold a presidential
     primary, voters to turn the one person they can trust: Ralph Wiggum.'
+  disneyplus_id:
   simpsonsworld_id: 307179075535
   good: maybe
   characters:
@@ -97,6 +107,7 @@ episodes:
   episode: 11
   description: Marge and Homer recount how Marge almost fell in love with a college
     professor during the 1990s.
+  disneyplus_id:
   simpsonsworld_id: 299664963588
   good: maybe
   characters:
@@ -106,6 +117,7 @@ episodes:
   description: 'When Homer and Marge become trapped in a tunnel of love, three Valentine''s
     Day stories unfold: Bonnie and Clyde steal each other''s hearts; a take-off on
     ''Lady and the Tramp''; punk rockers Lisa and Nelson are hooked on sweets.'
+  disneyplus_id:
   simpsonsworld_id: 310471235766
   good: maybe
   characters:
@@ -114,6 +126,7 @@ episodes:
   episode: 13
   description: Bart befriends a new kid at school, unaware that he's a snitch; after
     his car is damaged in an accident, Homer ends up with a fancy loaner.
+  disneyplus_id:
   simpsonsworld_id: 302849603730
   good: maybe
   characters:
@@ -122,6 +135,7 @@ episodes:
   episode: 14
   description: Bart and Lisa think they killed Martin Prince; Marge enlists the help
     of a reality TV show after Homer cheats on his diet.
+  disneyplus_id:
   simpsonsworld_id: 302849091724
   good: maybe
   characters:
@@ -130,6 +144,7 @@ episodes:
   episode: 15
   description: Lisa becomes addicted to secondhand smoke when she joins a ballet academy;
     Homer befriends raccoons who stole his beef jerky.
+  disneyplus_id:
   simpsonsworld_id: 310477379554
   good: maybe
   characters:
@@ -138,6 +153,7 @@ episodes:
   episode: 16
   description: Marge and Homer aid country singer Lurleen Lumpkin by reuniting her
     with her deadbeat father.
+  disneyplus_id:
   simpsonsworld_id: 283768387739
   good: maybe
   characters:
@@ -146,6 +162,7 @@ episodes:
   episode: 17
   description: Bart is overjoyed when the calf he's raising is judged Best in Show
     - until he realizes the animal is going to be slaughtered.
+  disneyplus_id:
   simpsonsworld_id: 302847555768
   good: maybe
   characters:
@@ -155,6 +172,7 @@ episodes:
   description: Lisa's documentary about life with the Simpsons is accepted into Sundance,
     but Lisa's initial elation turns to horror when festival-goers begin humiliating
     her dysfunctional family.
+  disneyplus_id:
   simpsonsworld_id: 283769923976
   good: maybe
   characters:
@@ -163,6 +181,7 @@ episodes:
   episode: 19
   description: When Homer's mother returns to Springfield, she asks Homer for his
     forgiveness.
+  disneyplus_id:
   simpsonsworld_id: 299670083511
   good: maybe
   characters:
@@ -172,6 +191,7 @@ episodes:
   description: Krusty hires Lisa to be his intern, but she's so good at the job, she
     ends up replacing him as host of his show; Bart and Homer discover the world of
     coin collecting.
+  disneyplus_id:
   simpsonsworld_id: 294774851723
   good: maybe
   characters:
