--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -6,6 +6,7 @@ episodes:
   description: When Homer returns from a Nuclear Workers Convention and begins behaving
     strangely, Lisa worries that her father has been brainwashed and is now part of
     a terrorist plot to blow up the power plant.
+  disneyplus_id:
   simpsonsworld_id: 307191875741
   good: maybe
   characters:
@@ -15,6 +16,7 @@ episodes:
   description: In three terrifying Halloween tales, Bart, Lisa and Maggie receive
     a visit from The Fat in the Hat; when Bart is decapitated, his head is sewn onto
     Lisa's body; Homer plots to kill Moe at a circus freak show.
+  disneyplus_id:
   simpsonsworld_id: 310259779794
   good: maybe
   characters:
@@ -25,6 +27,7 @@ episodes:
   description: A Springfield funeral prompts Marge, Kent Brockman, Homer and Mr. Burns
     to reexamine a crucial decision in their lives one that has brought them the most
     regret.
+  disneyplus_id:
   simpsonsworld_id: 311688259548
   good: maybe
   characters:
@@ -34,6 +37,7 @@ episodes:
   description: After experiencing a midlife crisis, Homer reaches out to an old pen
     pal; when a cheating scandal rocks Springfield Elementary, Lisa establishes an
     honor code.
+  disneyplus_id:
   simpsonsworld_id: 304473155645
   good: maybe
   characters:
@@ -43,6 +47,7 @@ episodes:
   description: Homer gets trapped in an elevator with a pregnant woman and helps deliver
     her baby; Lisa helps underpaid cheerleaders organize so they can demand a salary
     increase from a greedy football team owner.
+  disneyplus_id:
   simpsonsworld_id: 311105091548
   good: maybe
   characters:
@@ -51,6 +56,7 @@ episodes:
   episode: 6
   description: Lisa is elated to befriend Isabel, a smart new student at school, only
     to realize that she and Isabel are on opposite sides of the political spectrum.
+  disneyplus_id:
   simpsonsworld_id: 310523971648
   good: maybe
   characters:
@@ -60,6 +66,7 @@ episodes:
   description: Bart seeks revenge after Skinner prevents him from attending a school
     field trip aboard a submarine; Lisa suggests to the financially-strapped Krusty
     that he sell the foreign rights to his television show.
+  disneyplus_id:
   simpsonsworld_id: 304476739664
   good: maybe
   characters:
@@ -69,6 +76,7 @@ episodes:
   description: As Christmas approaches, Marge transforms the house into a bed and
     breakfast after Springfield becomes the only town in America to receive snowfall;
     Lisa vows to give her loved ones modest gifts that come from the heart.
+  disneyplus_id:
   simpsonsworld_id: 307199043880
   good: maybe
   characters:
@@ -77,6 +85,7 @@ episodes:
   episode: 9
   description: Homer is put on trial after the FBI catches him illegally downloading
     movies from the Internet.
+  disneyplus_id:
   simpsonsworld_id: 310523459925
   good: maybe
   characters:
@@ -85,6 +94,7 @@ episodes:
   episode: 10
   description: The Comic Book Guy marries a Japanese woman, only to discover that
     the woman's father disapproves of the union.
+  disneyplus_id:
   simpsonsworld_id: 310541379637
   good: maybe
   characters:
@@ -93,6 +103,7 @@ episodes:
   episode: 11
   description: Homer uses augmented reality glasses to spy on Marge; Nelson demands
     a Valentine's Day card from Bart.
+  disneyplus_id:
   simpsonsworld_id: 307204163997
   good: maybe
   characters:
@@ -101,6 +112,7 @@ episodes:
   episode: 12
   description: Bart befriends a fellow student and falconry expert, only to discover
     that the boy suffers from mental illness.
+  disneyplus_id:
   simpsonsworld_id: 310529091639
   good: maybe
   characters:
@@ -109,6 +121,7 @@ episodes:
   episode: 13
   description: Sideshow Bob genetically alters his DNA, giving him superhuman strength;
     Marge volunteers as a teen abstinence counselor.
+  disneyplus_id:
   simpsonsworld_id: 307207235909
   good: maybe
   characters:
@@ -118,6 +131,7 @@ episodes:
   description: When the Simpsons allow members of the retirement community to move
     in with them, Marge worries that Homer is picking up their habits and is turning
     into an old man; a gang of bullies accepts Bart as one of their own.
+  disneyplus_id:
   simpsonsworld_id: 307209283970
   good: maybe
   characters:
@@ -127,6 +141,7 @@ episodes:
   description: Homer convinces Marge to sell a painting that was purchased from Milhouse's
     parents at a yard sale, a painting that turns out to be worth a great deal of
     money.
+  disneyplus_id:
   simpsonsworld_id: 311117891947
   good: maybe
   characters:
@@ -135,6 +150,7 @@ episodes:
   episode: 16
   description: After Lisa delivers a school report on why her father is her hero,
     Homer is tapped to referee World Cup soccer in Brazil.
+  disneyplus_id:
   simpsonsworld_id: 304489539783
   good: maybe
   characters:
@@ -143,6 +159,7 @@ episodes:
   episode: 17
   description: Lisa falls for a competitive eater who subconsciously reminds her of
     Homer; after Bart hides Jailbird from the police, he begins receiving stolen gifts.
+  disneyplus_id:
   simpsonsworld_id: 304500803520
   good: maybe
   characters:
@@ -152,6 +169,7 @@ episodes:
   description: Thirty years in the future, Bart tries to reestablish his relationship
     with his estranged wife, Jenda; Lisa thinks Milhouse is far more interesting after
     he's bitten by a zombie.
+  disneyplus_id:
   simpsonsworld_id: 310257731892
   good: maybe
   characters:
@@ -161,6 +179,7 @@ episodes:
   description: Bart uses voodoo in an attempt to get rid of an art teacher, but when
     the teacher ends up getting pregnant, word spreads that Bart can help couples
     conceive.
+  disneyplus_id:
   simpsonsworld_id: 307214403888
   good: maybe
   characters:
@@ -169,6 +188,7 @@ episodes:
   episode: 20
   description: After Homer bonds with Lisa, Homer's imagination creates a world in
     which everything is made of Lego toys.
+  disneyplus_id:
   simpsonsworld_id: 311243331763
   good: maybe
   characters:
@@ -178,6 +198,7 @@ episodes:
   description: As Mother's Day approaches, after Homer and Marge's attempt to befriend
     other couples fails miserably, Lisa discovers a shocking secret about her new
     best friend.
+  disneyplus_id:
   simpsonsworld_id: 304502851923
   good: maybe
   characters:
@@ -187,6 +208,7 @@ episodes:
   description: Bart is overcome with guilt after an act of cowardice leads to his
     winning a school race; Homer vows to hold his own Fourth of July fireworks display
     after Springfield's holiday celebration is canceled.
+  disneyplus_id:
   simpsonsworld_id: 307219523604
   good: maybe
   characters:
@@ -196,6 +218,7 @@ episodes:
   description: 'A theatrical short that premiered July 13, 2012, attached to the theatrical
     release of Ice Age: Continental Drift.  It was nominated for an Academy Award
     for Best Animated Short.'
+  disneyplus_id:
   simpsonsworld_id: 588949571786
   good: maybe
   characters:
