--- a/episodes/season_27.yml
+++ b/episodes/season_27.yml
@@ -6,6 +6,7 @@ episodes:
   description: Marge decides it's finally time to separate from Homer, and quickly
     moves on with her life. Homer is initially devastated, but soon stumbles into
     a romance with a younger woman.
+  disneyplus_id:
   simpsonsworld_id: 770426947744
   good: false
   characters:
@@ -16,6 +17,7 @@ episodes:
   episode: 2
   description: A celebrity television chef challenges Homer to a barbecue cook-off.
     But before the competition, Homer's new, prized barbecue grill is stolen.
+  disneyplus_id:
   simpsonsworld_id: 770595395906
   good: false
   characters:
@@ -28,6 +30,7 @@ episodes:
   description: Patty and Selma try to quit smoking, but Patty moves in with the Simpsons
     when Selma takes it up again. Meanwhile, Maggie goes on an adventure with some
     local creatures.
+  disneyplus_id:
   simpsonsworld_id: 772103747997
   good: maybe
   characters:
@@ -40,6 +43,7 @@ episodes:
   description: The Simpsons are proud to be the most festively decorated house on
     the block. But when Lisa is traumatized at Krustyland Horror Night, she feels
     she cannot handle Halloween anymore.
+  disneyplus_id:
   simpsonsworld_id: 770425923947
   good: maybe
   characters:
@@ -49,6 +53,7 @@ episodes:
   description: After killing Bart, Sideshow Bob doesn't know what to do with himself;
     Homer wakes up with short-term memory loss; Because of radiation, Lisa, Bart and
     Milhouse gain super-powers.
+  disneyplus_id:
   simpsonsworld_id: 770433091920
   good: maybe
   characters:
@@ -59,6 +64,7 @@ episodes:
   description: Lisa makes a new friend at school - Harper, who happens to be super-rich,
     while Homer makes friends with Harper's dad and sets out to continue living the
     good life when Lisa decides to end the friendship.
+  disneyplus_id:
   simpsonsworld_id: 770437187884
   good: maybe
   characters:
@@ -67,6 +73,7 @@ episodes:
   episode: 7
   description: Broadway legend Laney Fontaine transforms Lisa into a show-biz kid
     after Homer loses her chance at band camp.
+  disneyplus_id:
   simpsonsworld_id: 770417219938
   good: maybe
   characters:
@@ -75,6 +82,7 @@ episodes:
   episode: 8
   description: Lisa tries to restore the reputation of a forgotten Springfield female
     inventor, while Bart takes full advantage of a diagnosis that he is a sociopath.
+  disneyplus_id:
   simpsonsworld_id: 770422339536
   good: maybe
   characters:
@@ -84,6 +92,7 @@ episodes:
   description: A tale of Bart's journey from youth to adulthood, where he is constantly
     in search of approval from his father and in the shadow of his more-successful
     younger sister.
+  disneyplus_id:
   simpsonsworld_id: 1071531075851
   good: maybe
   characters:
@@ -93,6 +102,7 @@ episodes:
   description: When Homer loses his job due to Marge's social media post, he begins
     working as a dishwasher at a Greek restaurant. Meanwhile, Lisa creates an app
     that can predict the effect any post on social media will have.
+  disneyplus_id:
   simpsonsworld_id: 770434627559
   good: maybe
   characters:
@@ -102,6 +112,7 @@ episodes:
   description: Bart and Principal Skinner battle over the affection of Bart's new
     teacher, and a new milk-based product that Homer buys from the Kwik-E-Mart causes
     big changes in Bart and Lisa.
+  disneyplus_id:
   simpsonsworld_id: 770430019813
   good: maybe
   characters:
@@ -111,6 +122,7 @@ episodes:
   description: Apu's nephew makes big changes when he takes over the Kwik-E-Mart business,
     and Bart decides that he's through with being bad after his latest prank spirals
     out of control.
+  disneyplus_id:
   simpsonsworld_id: 770449475567
   good: maybe
   characters:
@@ -120,6 +132,7 @@ episodes:
   description: Professor Frink's new invention turns him into a ladies' man, while
     a new pill at the Springfield Retirement Castle causes Grandpa to hallucinate
     back to his happiest moments.
+  disneyplus_id:
   simpsonsworld_id: 770439747712
   good: maybe
   characters:
@@ -129,6 +142,7 @@ episodes:
   description: Lisa tries to launch the career of a homeless Appalachian folk singer,
     but Bart warns her that she will just let her down. Meanwhile, Homer tries to
     rescue the cat, who is trapped in the walls of the house.
+  disneyplus_id:
   simpsonsworld_id: 770451523845
   good: maybe
   characters:
@@ -138,6 +152,7 @@ episodes:
   description: Lisa takes a job as veterinarian's assistant, but soon lets the responsibilities
     of the job get to her head. Meanwhile, Marge decides to take a job as a crime
     scene cleaner.
+  disneyplus_id:
   simpsonsworld_id: 770452547696
   good: maybe
   characters:
@@ -147,6 +162,7 @@ episodes:
   description: Lisa signs up for an opportunity to be part of a mission to colonize
     Mars in ten years, and Homer's strategy to use reverse psychology to talk her
     out of it backfires.
+  disneyplus_id:
   simpsonsworld_id: 770891331927
   good: maybe
   characters:
@@ -156,6 +172,7 @@ episodes:
   description: Homer tries to raise Smithers' spirits by finding him a man, and Lisa
     gets the lead in the school production of "Casablanca" alongside a new male student,
     sparking Millhouse's jealousy.
+  disneyplus_id:
   simpsonsworld_id: 770893891557
   good: maybe
   characters:
@@ -165,6 +182,7 @@ episodes:
   description: After Lisa overhears Marge say that she doesn't like Lisa's jazz music,
     Marge takes Lisa on a trip to Capitol City to regain her friendship. Meanwhile,
     Bart uses Maggie as his new partner in crime for his practical jokes.
+  disneyplus_id:
   simpsonsworld_id: 770893891750
   good: maybe
   characters:
@@ -173,6 +191,7 @@ episodes:
   episode: 19
   description: Maggie will not go to sleep, so Homer tells her a bedtime story about
     when the Simpsons and the Flanders went together to the Grand Canyon.
+  disneyplus_id:
   simpsonsworld_id: 1071851075844
   good: maybe
   characters:
@@ -182,6 +201,7 @@ episodes:
   description: After promising Marge the trip of a lifetime, Homer makes a deal with
     a travel agent to be a courier of a top-secret briefcase in exchange for a discounted
     family vacation to Paris.
+  disneyplus_id:
   simpsonsworld_id: 772102211921
   good: maybe
   characters:
@@ -191,6 +211,7 @@ episodes:
   description: While trying to overcome a fear of public speaking, Homer creates an
     improv comedy troupe. Meanwhile, Marge rebuilds Bart's treehouse, but gets no
     thanks from him. Homer later appears live to answer phoned in questions.
+  disneyplus_id:
   simpsonsworld_id: 770892355976
   good: maybe
   characters:
@@ -199,6 +220,7 @@ episodes:
   episode: 22
   description: Marge lets Bart go to the park alone because he's too irritating, then
     she ends up getting arrested for leaving him unsupervised.
+  disneyplus_id:
   simpsonsworld_id: 772111939897
   good: maybe
   characters:
