--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -6,6 +6,7 @@ episodes:
   description: Homer is institutionalized after Bart fills out his sanity test.  A
     man who thinks he is Michael Jackson helps Bart write a song for Lisa when he
     forgets her birthday.
+  disneyplus_id:
   simpsonsworld_id: 272234051980
   good: false
   characters:
@@ -15,6 +16,7 @@ episodes:
   episode: 2
   description: The Simpsons travel to the Nation's Capitol when Lisa becomes a semifinalist
     in an essay contest on patriotism.
+  disneyplus_id:
   simpsonsworld_id: 275196995796
   good: true
   characters:
@@ -24,6 +26,7 @@ episodes:
   episode: 3
   description: Ned Flanders opens a store for left-handed people and Homer is overjoyed
     when it performs poorly.
+  disneyplus_id:
   simpsonsworld_id: 272051267562
   good: true
   characters:
@@ -34,6 +37,7 @@ episodes:
   episode: 4
   description: Bart fraternizes with a gang of mobsters and becomes the prime suspect
     when Principal Skinner mysteriously disappears.
+  disneyplus_id:
   simpsonsworld_id: 288015427922
   good: true
   characters:
@@ -44,6 +48,7 @@ episodes:
   episode: 5
   description: Homer becomes a hero when he averts a catastrophe at the power plant,
     but what is perceived as his skill of being a quick thinker is actually dumb luck.
+  disneyplus_id:
   simpsonsworld_id: 256843843704
   good: true
   characters:
@@ -53,6 +58,7 @@ episodes:
   episode: 6
   description: Bart and Lisa scheme to reunite Krusty the Clown with his father, Rabbi
     Krustofsky, who disowned him for not carrying on the family tradition.
+  disneyplus_id:
   simpsonsworld_id: 256874051703
   good: true
   characters:
@@ -64,6 +70,7 @@ episodes:
   episode: 7
   description: The Simpsons eat too much candy on Halloween and experience nightmarish
     tales of horror while they sleep.
+  disneyplus_id:
   simpsonsworld_id: 272054339616
   good: true
   characters:
@@ -73,6 +80,7 @@ episodes:
   episode: 8
   description: Homer realizes that he never shows Lisa the attention she deserves
     and buys her a pony.
+  disneyplus_id:
   simpsonsworld_id: 310374467809
   good: false
   characters:
@@ -83,6 +91,7 @@ episodes:
   episode: 9
   description: Realizing he has not been a good father to Bart, Homer aids his son
     in building a soap box racer.
+  disneyplus_id:
   simpsonsworld_id: 256898115598
   good: true
   characters:
@@ -93,6 +102,7 @@ episodes:
   episode: 10
   description: Homer gives Moe the recipe for a unique alcoholic drink, and when it
     turns into a sensation, Moe takes credit, and the profits, from its success.
+  disneyplus_id:
   simpsonsworld_id: 305663555961
   good: true
   characters:
@@ -103,6 +113,7 @@ episodes:
   episode: 11
   description: Homer is fired from his job when a German firm buys the power plant
     from Mr. Burns.
+  disneyplus_id:
   simpsonsworld_id: 310380099512
   good: false
   characters:
@@ -112,6 +123,7 @@ episodes:
   episode: 12
   description: When Marge believes she may be pregnant, Homer recounts how Bart was
     born.
+  disneyplus_id:
   simpsonsworld_id: 299618371603
   good: false
   characters:
@@ -123,6 +135,7 @@ episodes:
   description: Using his Superstar Celebrity microphone, Bart tricks all of Springfield
     into believing that a child has fallen down a well.  But when he falls into the
     same well, Bart cannot get anyone to save him.
+  disneyplus_id:
   simpsonsworld_id: 272052803895
   good: true
   characters:
@@ -132,6 +145,7 @@ episodes:
   episode: 14
   description: Lisa accurately predicts the winners of sporting events that Homer
     gambles on so she can be closer to her father.
+  disneyplus_id:
   simpsonsworld_id: 273404483565
   good: true
   characters:
@@ -142,6 +156,7 @@ episodes:
   episode: 15
   description: When Marge reaches the breaking point, she leaves for a much needed
     vacation, leaving the rest of the family to realize how much she does for them.
+  disneyplus_id:
   simpsonsworld_id: 272224835795
   good: false
   characters:
@@ -152,6 +167,7 @@ episodes:
   episode: 16
   description: When Bart discovers that his divorced teacher, Mrs. Krabappel, has
     placed a "personals" ad in the local newspaper, he decides to create fake correspondence.
+  disneyplus_id:
   simpsonsworld_id: 272228931984
   good: true
   characters:
@@ -163,6 +179,7 @@ episodes:
   description: Mr. Burns bets one million dollars that his power plant's softball
     team will win the championship, then hires professional baseball players to be
     members of the team.
+  disneyplus_id:
   simpsonsworld_id: 310380099768
   good: true
   characters:
@@ -173,6 +190,7 @@ episodes:
   episode: 18
   description: Bart finds new respect for the law and Lisa hangs out with the wrong
     crowd after they both take career aptitude tests.
+  disneyplus_id:
   simpsonsworld_id: 263513155607
   good: true
   characters:
@@ -183,6 +201,7 @@ episodes:
   episode: 19
   description: The Simpsons must choose between frills and their dog when Santa's
     Little Helper needs an expensive operation to save its life.
+  disneyplus_id:
   simpsonsworld_id: 274404419620
   good: true
   characters:
@@ -192,6 +211,7 @@ episodes:
   season: 3
   episode: 20
   description: Homer becomes the manager of a beautiful Country Western singer.
+  disneyplus_id:
   simpsonsworld_id: 272215619762
   good: true
   characters:
@@ -201,6 +221,7 @@ episodes:
   episode: 21
   description: To Bart's horror, Selma announces that her husband-to-be is none other
     than Sideshow Bob.
+  disneyplus_id:
   simpsonsworld_id: 272221251812
   good: true
   characters:
@@ -211,6 +232,7 @@ episodes:
   episode: 22
   description: Bart attends a Spinal Tap concert.  Otto loses his job driving the
     school bus and moves in with the Simpsons.
+  disneyplus_id:
   simpsonsworld_id: 279103043694
   good: true
   characters:
@@ -221,6 +243,7 @@ episodes:
   episode: 23
   description: Bart becomes jealous when Milhouse falls for a girl who transferred
     to their school.
+  disneyplus_id:
   simpsonsworld_id: 280393283967
   good: true
   characters:
@@ -231,6 +254,7 @@ episodes:
   episode: 24
   description: 'Herb Powell asks his brother Homer to let him borrow $2000 to develop
     a new invention: a translator of baby gibberish.'
+  disneyplus_id:
   simpsonsworld_id: 279098435798
   good: false
   characters:
