--- a/episodes/season_04.yml
+++ b/episodes/season_04.yml
@@ -5,6 +5,7 @@ episodes:
   episode: 1
   description: Bart and Lisa are horrified when their summer at Kamp Krusty turns
     into a nightmare.
+  disneyplus_id:
   simpsonsworld_id: 279133251579
   good: true
   characters:
@@ -15,6 +16,7 @@ episodes:
   episode: 2
   description: When Marge lands the role of Blanche in a local production of "A Streetcar
     Named Desire," Homer cannot hide his disinterest.
+  disneyplus_id:
   simpsonsworld_id: 273537603751
   good: true
   characters:
@@ -23,6 +25,7 @@ episodes:
   episode: 3
   description: Homer creates his own religion as a means of escaping church services
     on Sundays.
+  disneyplus_id:
   simpsonsworld_id: 279137859827
   good: true
   characters:
@@ -31,6 +34,7 @@ episodes:
   season: 4
   episode: 4
   description: Homer enters Lisa in a beauty pageant when her self-esteem plummets.
+  disneyplus_id:
   simpsonsworld_id: 273537603930
   good: true
   characters:
@@ -41,6 +45,7 @@ episodes:
   episode: 5
   description: During a Halloween party, the Simpsons tell three horrifying tales
     of the macabre.
+  disneyplus_id:
   simpsonsworld_id: 305668675610
   good: true
   characters:
@@ -50,6 +55,7 @@ episodes:
   episode: 6
   description: Homer forbids his son from seeing a new movie about his favorite cartoon
     heroes as punishment for misbehaving.
+  disneyplus_id:
   simpsonsworld_id: 278803011830
   good: true
   characters:
@@ -60,6 +66,7 @@ episodes:
   episode: 7
   description: When the foundation to the Simpsons' house is need of an expensive
     repair, Marge takes a position at the power plant where Homer works.
+  disneyplus_id:
   simpsonsworld_id: 299613763656
   good: false
   characters:
@@ -69,6 +76,7 @@ episodes:
   episode: 8
   description: Bart falls in love with the girl who moves in next door, only to find
     that she prefers the school bully.
+  disneyplus_id:
   simpsonsworld_id: 273542211871
   good: false
   characters:
@@ -78,6 +86,7 @@ episodes:
   season: 4
   episode: 9
   description: Homer and Barney vie for Springfield's lucrative snow plowing business.
+  disneyplus_id:
   simpsonsworld_id: 273544259768
   good: true
   characters:
@@ -88,6 +97,7 @@ episodes:
   episode: 10
   description: Marge recounts how Lisa first spoke as the family awaits baby Maggie's
     first word.
+  disneyplus_id:
   simpsonsworld_id: 288026691837
   good: false
   characters:
@@ -97,6 +107,7 @@ episodes:
   episode: 11
   description: Homer suffers a heart attack and hires Dr. Nick Riviera to perform
     a delicate triple bypass operation.
+  disneyplus_id:
   simpsonsworld_id: 273548355538
   good: true
   characters:
@@ -106,6 +117,7 @@ episodes:
   episode: 12
   description: An unscrupulous profiteer sells the people of Springfield on a defective
     monorail system, with Homer as the conductor.
+  disneyplus_id:
   simpsonsworld_id: 306386499796
   good: true
   characters:
@@ -116,6 +128,7 @@ episodes:
   episode: 13
   description: Selma decides to take her dead aunt's advice and have children before
     it is too late.
+  disneyplus_id:
   simpsonsworld_id: 310386755912
   good: true
   characters:
@@ -128,6 +141,7 @@ episodes:
   description: Bart tires of Homer's lack of interest in him and chooses another father
     from the Bigger Brother program.  Lisa struggles to kick the habit of dialing
     a 900 number.
+  disneyplus_id:
   simpsonsworld_id: 274103363992
   good: false
   characters:
@@ -139,6 +153,7 @@ episodes:
   episode: 15
   description: Lisa feels pity for Ralph, a nerdy classmate, and gives him a card
     on Valentine's Day. But to her horror, Ralph develops a crush on her.
+  disneyplus_id:
   simpsonsworld_id: 274107459686
   good: true
   characters:
@@ -149,6 +164,7 @@ episodes:
   episode: 16
   description: Marge convinces Homer he may have a drinking problem. Lisa plots to
     humiliate Bart with her science project after he ruins an experiment.
+  disneyplus_id:
   simpsonsworld_id: 277249603926
   good: true
   characters:
@@ -157,6 +173,7 @@ episodes:
   episode: 17
   description: Homer is elected union leader at the power plant and tries to save
     the dental plan so he will not have to pay for Lisa's new braces.
+  disneyplus_id:
   simpsonsworld_id: 357630019692
   good: true
   characters:
@@ -167,6 +184,7 @@ episodes:
   episode: 18
   description: Family and friends reminisce about Homer's life after Bart's April
     Fools' Day prank sends him to the hospital.
+  disneyplus_id:
   simpsonsworld_id: 305670723781
   good: false
   characters:
@@ -176,6 +194,7 @@ episodes:
   episode: 19
   description: Using Grandpa as a front, Lisa and Bart write their own "Itchy and
     Scratchy" cartoons.
+  disneyplus_id:
   simpsonsworld_id: 288029763650
   good: true
   characters:
@@ -187,6 +206,7 @@ episodes:
   episode: 20
   description: Lisa seeks to end a local holiday in which snakes are chased into town
     and beaten with sticks.  Bart is expelled from school by Principal Skinner.
+  disneyplus_id:
   simpsonsworld_id: 288129091929
   good: true
   characters:
@@ -195,6 +215,7 @@ episodes:
   episode: 21
   description: Marge is jailed when she is convicted of stealing from Apu's convenience
     store.
+  disneyplus_id:
   simpsonsworld_id: 299606595657
   good: false
   characters:
@@ -203,6 +224,7 @@ episodes:
   episode: 22
   description: Bart, Lisa and a group of celebrities help Krusty turn his career around
     after his television show is canceled.
+  disneyplus_id:
   simpsonsworld_id: 274256963874
   good: true
   characters:
