--- a/episodes/season_08.yml
+++ b/episodes/season_08.yml
@@ -6,6 +6,7 @@ episodes:
   description: 'The Simpsons appear in three tales of terror: Bart discovers an evil
     twin brother living in the attic; Lisa creates a microscopic society; and space
     aliens transform themselves into Clinton and Dole look-alikes.'
+  disneyplus_id:
   simpsonsworld_id: 299625027835
   good: true
   characters:
@@ -15,6 +16,7 @@ episodes:
   episode: 2
   description: The Simpsons relocate to another community after Homer unwittingly
     takes a job with a company controlled by a super-villain.
+  disneyplus_id:
   simpsonsworld_id: 306390595776
   good: true
   characters:
@@ -23,6 +25,7 @@ episodes:
   episode: 3
   description: Homer becomes a professional boxer when doctors discover he was born
     with a unique genetic condition that protects his brain from injury.
+  disneyplus_id:
   simpsonsworld_id: 288058947803
   good: true
   characters:
@@ -30,6 +33,7 @@ episodes:
   season: 8
   episode: 4
   description: With Homer's help, Mr. Burns' long-lost son stages his own kidnapping.
+  disneyplus_id:
   simpsonsworld_id: 299622467514
   good: false
   characters:
@@ -38,6 +42,7 @@ episodes:
   episode: 5
   description: While Marge is out of town, Homer allows Bart to work at a burlesque
     house.
+  disneyplus_id:
   simpsonsworld_id: 294789699801
   good: true
   characters:
@@ -46,6 +51,7 @@ episodes:
   episode: 6
   description: When Milhouse's parents get a divorce, Homer grows convinced that his
     own marriage is in jeopardy.
+  disneyplus_id:
   simpsonsworld_id: 277025347786
   good: true
   characters:
@@ -54,6 +60,7 @@ episodes:
   episode: 7
   description: Lisa develops a crush on bully Nelson Muntz.  Homer uses an automatic
     telephone dialer for an electronic panhandling scheme.
+  disneyplus_id:
   simpsonsworld_id: 306394691862
   good: true
   characters:
@@ -61,6 +68,7 @@ episodes:
   season: 8
   episode: 8
   description: Ned Flanders suffers a breakdown after his home is destroyed by a hurricane.
+  disneyplus_id:
   simpsonsworld_id: 436250179702
   good: true
   characters:
@@ -70,6 +78,7 @@ episodes:
   description: After ingesting several Guatemalan peppers during chili cook-off, Homer
     experiences hallucinatory visions that inspire him to find his true soul mate
     in life.
+  disneyplus_id:
   simpsonsworld_id: 436252739905
   good: true
   characters:
@@ -78,6 +87,7 @@ episodes:
   episode: 10
   description: X-Files Agents Mulder and Scully investigate Homer's encounter with
     an alleged extraterrestrial.
+  disneyplus_id:
   simpsonsworld_id: 436259395954
   good: true
   characters:
@@ -86,6 +96,7 @@ episodes:
   episode: 11
   description: After being expelled from an investment club, Marge starts her own
     pretzel franchise.
+  disneyplus_id:
   simpsonsworld_id: 436264515927
   good: true
   characters:
@@ -94,6 +105,7 @@ episodes:
   episode: 12
   description: Homer and Mr. Burns are buried beneath an avalanche during a survival
     trek in the mountains.
+  disneyplus_id:
   simpsonsworld_id: 436267075791
   good: true
   characters:
@@ -102,6 +114,7 @@ episodes:
   episode: 13
   description: The Simpsons hire a Mary Poppins-like nanny when Marge becomes overwhelmed
     by the demands of being a housewife.
+  disneyplus_id:
   simpsonsworld_id: 436271683676
   good: true
   characters:
@@ -111,6 +124,7 @@ episodes:
   description: When ratings for Itchy & Scratchy cartoons plummet, a studio committee
     creates a new, hipper character and hires Homer to provide the voice. Presented
     by FXX.
+  disneyplus_id:
   simpsonsworld_id: 436278339668
   good: true
   characters:
@@ -119,6 +133,7 @@ episodes:
   episode: 15
   description: Homer grows homophobic after he realizes the family's new friend is
     gay.
+  disneyplus_id:
   simpsonsworld_id: 436284995621
   good: true
   characters:
@@ -128,6 +143,7 @@ episodes:
   description: Bart fears the worst when Sideshow Bob wins release from prison by
     claiming he is a reformed man and is hired by his brother to work on a construction
     project.
+  disneyplus_id:
   simpsonsworld_id: 436296259771
   good: true
   characters:
@@ -135,6 +151,7 @@ episodes:
   season: 8
   episode: 17
   description: Homer and Marge allow Lisa to baby-sit Bart.
+  disneyplus_id:
   simpsonsworld_id: 436301891875
   good: false
   characters:
@@ -143,6 +160,7 @@ episodes:
   episode: 18
   description: Homer turns bootlegger when Springfield enforces an antiquated prohibition
     law.
+  disneyplus_id:
   simpsonsworld_id: 436402755605
   good: true
   characters:
@@ -150,6 +168,7 @@ episodes:
   season: 8
   episode: 19
   description: Bart exposes Skinner and Krabappel's clandestine affair.
+  disneyplus_id:
   simpsonsworld_id: 436412995642
   good: true
   characters:
@@ -158,6 +177,7 @@ episodes:
   episode: 20
   description: Bart gives away Santa's Little Helper so he can keep a fully trained,
     blue ribbon Collie.
+  disneyplus_id:
   simpsonsworld_id: 436370499586
   good: false
   characters:
@@ -166,6 +186,7 @@ episodes:
   episode: 21
   description: Lisa helps Mr. Burns build a recycling center after a series of bad
     investments costs the multimillionaire his fortune.
+  disneyplus_id:
   simpsonsworld_id: 436383811985
   good: true
   characters:
@@ -174,6 +195,7 @@ episodes:
   episode: 22
   description: Marge becomes a church volunteer.  Homer discovers his image printed
     on a box of Japanese dish detergent.
+  disneyplus_id:
   simpsonsworld_id: 436438595644
   good: true
   characters:
@@ -182,6 +204,7 @@ episodes:
   episode: 23
   description: A resentful, hard-working employee at the power plant makes Homer his
     enemy.  Bart purchases an abandoned factory for one dollar at a government auction.
+  disneyplus_id:
   simpsonsworld_id: 436466755640
   good: true
   characters:
@@ -189,6 +212,7 @@ episodes:
   season: 8
   episode: 24
   description: Troy McClure hosts three spin-offs from "The Simpsons" television show.
+  disneyplus_id:
   simpsonsworld_id: 436481091875
   good: false
   characters:
@@ -197,6 +221,7 @@ episodes:
   episode: 25
   description: Cadets give Lisa the "silent treatment" when she enrolls in an all-male
     military academy.
+  disneyplus_id:
   simpsonsworld_id: 1071844931909
   good: true
   characters:
