--- a/episodes/season_09.yml
+++ b/episodes/season_09.yml
@@ -4,6 +4,7 @@ episodes:
   season: 9
   episode: 1
   description: The Simpsons journey to New York City to retrieve the family car.
+  disneyplus_id:
   simpsonsworld_id: 436516931611
   good: true
   characters:
@@ -11,6 +12,7 @@ episodes:
   season: 9
   episode: 2
   description: A stranger claims that Principal Skinner is an impostor.
+  disneyplus_id:
   simpsonsworld_id: 436505155662
   good: true
   characters:
@@ -18,6 +20,7 @@ episodes:
   season: 9
   episode: 3
   description: Homer and Marge recount how Lisa got her saxophone.
+  disneyplus_id:
   simpsonsworld_id: 279743555749
   good: false
   characters:
@@ -27,6 +30,7 @@ episodes:
   description: Homer battles killer mutants after Springfield is destroyed by a nuclear
     blast; a matter- transportation device melds Bart with a housefly; in Colonial
     times, Marge is accused of being a witch.
+  disneyplus_id:
   simpsonsworld_id: 279170627965
   good: true
   characters:
@@ -35,6 +39,7 @@ episodes:
   season: 9
   episode: 5
   description: Homer purchases a handgun to protect his family.
+  disneyplus_id:
   simpsonsworld_id: 302813251779
   good: true
   characters:
@@ -43,6 +48,7 @@ episodes:
   episode: 6
   description: Homer becomes coach of the Springfield Pee Wee Football team and appoints
     Bart as starting quarterback.
+  disneyplus_id:
   simpsonsworld_id: 448293443714
   good: false
   characters:
@@ -51,6 +57,7 @@ episodes:
   episode: 7
   description: In an effort to annul an arranged marriage, Apu tells his mother he
     wed Marge.
+  disneyplus_id:
   simpsonsworld_id: 279177283545
   good: false
   characters:
@@ -59,6 +66,7 @@ episodes:
   episode: 8
   description: Townspeople believe Lisa has unearthed the fossilized remains of an
     angel.
+  disneyplus_id:
   simpsonsworld_id: 279180355540
   good: true
   characters:
@@ -67,6 +75,7 @@ episodes:
   episode: 9
   description: Marge gets a job with a realty firm, but her honesty costs her lucrative
     sales.  Homer purchases a 60s hot-rod convertible at a police auction.
+  disneyplus_id:
   simpsonsworld_id: 280404547525
   good: true
   characters:
@@ -75,6 +84,7 @@ episodes:
   episode: 10
   description: People throughout Springfield open their hearts and wallets after Bart
     claims the family's Christmas presents were stolen by a burglar.
+  disneyplus_id:
   simpsonsworld_id: 306881091696
   good: false
   characters:
@@ -82,6 +92,7 @@ episodes:
   season: 9
   episode: 11
   description: The Simpsons recall their many musical moments from seasons past.
+  disneyplus_id:
   simpsonsworld_id: 294808131518
   good: false
   characters:
@@ -90,6 +101,7 @@ episodes:
   episode: 12
   description: A carnival worker and his son move in with the Simpsons after Homer
     costs them their jobs.
+  disneyplus_id:
   simpsonsworld_id: 302818371931
   good: true
   characters:
@@ -98,6 +110,7 @@ episodes:
   episode: 13
   description: Marge tries her hand at deprogramming after her family is brainwashed
     by a religious cult.
+  disneyplus_id:
   simpsonsworld_id: 299627075941
   good: true
   characters:
@@ -106,6 +119,7 @@ episodes:
   episode: 14
   description: Bart, Lisa and their classmates fight for survival when they become
     stranded on a remote island.  Homer starts his own business on the Internet.
+  disneyplus_id:
   simpsonsworld_id: 448356931860
   good: false
   characters:
@@ -114,6 +128,7 @@ episodes:
   episode: 15
   description: Krusty shuns his old routines in favor of edgier material and suddenly
     becomes the hottest comic in show business.
+  disneyplus_id:
   simpsonsworld_id: 294812739638
   good: true
   characters:
@@ -122,6 +137,7 @@ episodes:
   episode: 16
   description: When Moe goes broke romancing his new love, he enlists Homer in a scheme
     to collect on an insurance policy.
+  disneyplus_id:
   simpsonsworld_id: 283910211639
   good: true
   characters:
@@ -130,6 +146,7 @@ episodes:
   episode: 17
   description: Lisa fears she is genetically predisposed to lose her intelligence.
     Apu uses a frozen Jasper as a tourist attraction.
+  disneyplus_id:
   simpsonsworld_id: 299651139676
   good: true
   characters:
@@ -137,6 +154,7 @@ episodes:
   season: 9
   episode: 18
   description: Bart is appalled when Marge pairs him with Ralph Wiggum.
+  disneyplus_id:
   simpsonsworld_id: 299639875678
   good: false
   characters:
@@ -144,6 +162,7 @@ episodes:
   season: 9
   episode: 19
   description: Homer becomes the captain of a Navy submarine.  Bart gets his ear pierced.
+  disneyplus_id:
   simpsonsworld_id: 302809667837
   good: true
   characters:
@@ -152,6 +171,7 @@ episodes:
   episode: 20
   description: When a tax audit lands him in hot water, Homer goes undercover for
     the government and attempts to retrieve a trillion dollar note from Mr. Burns.
+  disneyplus_id:
   simpsonsworld_id: 299644483816
   good: false
   characters:
@@ -160,6 +180,7 @@ episodes:
   episode: 21
   description: Bart attempts to upstage Lisa when the pair co-host a children's news
     program.  Homer obtains a helper monkey.
+  disneyplus_id:
   simpsonsworld_id: 299672131928
   good: true
   characters:
@@ -168,6 +189,7 @@ episodes:
   episode: 22
   description: Homer enters the race for Sanitation Commissioner after garbage men
     refuse to collect his trash.
+  disneyplus_id:
   simpsonsworld_id: 307101763818
   good: true
   characters:
@@ -176,6 +198,7 @@ episodes:
   episode: 23
   description: After improving his physique, Homer attempts to climb a treacherous
     mountain.
+  disneyplus_id:
   simpsonsworld_id: 467593795648
   good: false
   characters:
@@ -184,6 +207,7 @@ episodes:
   episode: 24
   description: Lisa gets lost in an unfamiliar part of town while searching for a
     museum. Bart adheres novelties to his face only to discover they cannot be removed.
+  disneyplus_id:
   simpsonsworld_id: 467595331852
   good: true
   characters:
@@ -192,6 +216,7 @@ episodes:
   episode: 25
   description: Homer and Marge discover the secret to reigniting their sex life. Bart
     and Lisa hunt for hidden treasure using Grampa's old mine sweeper.
+  disneyplus_id:
   simpsonsworld_id: 467599939876
   good: false
   characters:
