--- a/episodes/season_12.yml
+++ b/episodes/season_12.yml
@@ -6,6 +6,7 @@ episodes:
   description: On Halloween... a deceased Homer must perform one good deed to get
     into heaven; angry dolphins launch an attack against the people of Springfield;
     Bart and Lisa encounter characters from fairy tales.
+  disneyplus_id:
   simpsonsworld_id: 294765123660
   good: false
   characters:
@@ -15,6 +16,7 @@ episodes:
   episode: 2
   description: The townspeople of Springfield divide into two communities when the
     telephone company institutes a new area code system.
+  disneyplus_id:
   simpsonsworld_id: 300911171880
   good: true
   characters:
@@ -24,6 +26,7 @@ episodes:
   episode: 3
   description: Krusty discovers that he fathered a child during the Gulf War... only
     to gamble away his daughter's precious violin during a poker game with Fat Tony.
+  disneyplus_id:
   simpsonsworld_id: 306934851515
   good: false
   characters:
@@ -33,6 +36,7 @@ episodes:
   episode: 4
   description: Lisa joins a group of eco-radicals in her attempt to save the city's
     oldest redwood tree.
+  disneyplus_id:
   simpsonsworld_id: 306939971530
   good: false
   characters:
@@ -42,6 +46,7 @@ episodes:
   episode: 5
   description: As the Thanksgiving holiday approaches, Mr. Burns hires Homer to be
     his 'prank monkey.'
+  disneyplus_id:
   simpsonsworld_id: 311670339999
   good: false
   characters:
@@ -52,6 +57,7 @@ episodes:
   episode: 6
   description: Homer uses his new computer to spread gossip on the Internet... and
     eventually finds himself stranded on a mysterious island.
+  disneyplus_id:
   simpsonsworld_id: 302843971598
   good: false
   characters:
@@ -61,6 +67,7 @@ episodes:
   episode: 7
   description: Homer and Bart become scam artists when the family is faced with the
     cost of a sudden car repair.
+  disneyplus_id:
   simpsonsworld_id: 304456259863
   good: true
   characters:
@@ -72,6 +79,7 @@ episodes:
   description: As Christmas approaches, a winter snowstorm traps Bart, Lisa and their
     fellow students inside Springfield Elementary, where Principal Skinner attempts
     to keep chaos from erupting.
+  disneyplus_id:
   simpsonsworld_id: 307850819951
   good: false
   characters:
@@ -83,6 +91,7 @@ episodes:
   episode: 9
   description: Homer experiences a dramatic increase in intelligence when researchers
     remove a crayon lodged in his brain.
+  disneyplus_id:
   simpsonsworld_id: 306945603638
   good: true
   characters:
@@ -94,6 +103,7 @@ episodes:
   description: With Marge's help, an inmate with artistic ability is paroled from
     prison.  But when the ex-con gets a job painting a mural at the elementary school,
     he clashes with Skinner.
+  disneyplus_id:
   simpsonsworld_id: 302844995961
   good: false
   characters:
@@ -104,6 +114,7 @@ episodes:
   episode: 11
   description: When the Comic Book Guy suffers a heart attack, Bart and Milhouse take
     over his store.
+  disneyplus_id:
   simpsonsworld_id: 310459971509
   good: true
   characters:
@@ -115,6 +126,7 @@ episodes:
   episode: 12
   description: When the Simpsons construct a tennis court in the backyard, Bart pairs
     up with Marge and becomes a tennis whiz... much to Homer's disappointment.
+  disneyplus_id:
   simpsonsworld_id: 300916291603
   good: false
   characters:
@@ -126,6 +138,7 @@ episodes:
   episode: 13
   description: Sideshow Bob wins release from prison and hypnotizes Bart to kill Krusty
     the Clown.
+  disneyplus_id:
   simpsonsworld_id: 307106883649
   good: false
   characters:
@@ -137,6 +150,7 @@ episodes:
   episode: 14
   description: After casting Bart and his friends as singers in an all-boy band, a
     crazed record producer launches an attack on the offices of MAD magazine.
+  disneyplus_id:
   simpsonsworld_id: 310437443723
   good: true
   characters:
@@ -146,6 +160,7 @@ episodes:
   episode: 15
   description: Homer goes on a hunger strike after learning that the owner of the
     Springfield Isotopes plans on moving the team to Albuquerque.
+  disneyplus_id:
   simpsonsworld_id: 307850819931
   good: true
   characters:
@@ -155,6 +170,7 @@ episodes:
   episode: 16
   description: Lisa searches for answers when a new student at school bullies her;
     Homer starts his own baby-proofing business.
+  disneyplus_id:
   simpsonsworld_id: 302846019892
   good: false
   characters:
@@ -165,6 +181,7 @@ episodes:
   episode: 17
   description: The Simpsons journey through Africa, where they encounter jungle animals,
     tribesmen... and a chimp refuge owner with a secret.
+  disneyplus_id:
   simpsonsworld_id: 302845507908
   good: false
   characters:
@@ -175,6 +192,7 @@ episodes:
   description: 'A day in the life of the Simpsons replays three times: Homer panics
     when Marge slices off his thumb; Lisa attempts to place her entry in the school
     science fair; Bart is pursued by gangsters.'
+  disneyplus_id:
   simpsonsworld_id: 302842947994
   good: false
   characters:
@@ -186,6 +204,7 @@ episodes:
   description: To fulfill his dead wife's final wish, Ned Flanders converts an old,
     closed amusement park into a new Christian amusement park, 'Praiseland.'  The
     park flops until visitors begin having 'visions.'
+  disneyplus_id:
   simpsonsworld_id: 302848579632
   good: true
   characters:
@@ -196,6 +215,7 @@ episodes:
   description: After Homer injures his knee, he's housebound for recuperation.  A
     successful stint as a babysitter prompts Homer to open a full-time daycare service,
     leaving Bart and Lisa feeling neglected.
+  disneyplus_id:
   simpsonsworld_id: 301652547508
   good: false
   characters:
@@ -205,6 +225,7 @@ episodes:
   episode: 21
   description: The Simpsons jump a train, and meet a hobo, who tells them twisted
     versions of three classic tales, all of which feature Simpsons characters.
+  disneyplus_id:
   simpsonsworld_id: 301685315594
   good: false
   characters:
