--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -6,6 +6,7 @@ episodes:
   description: On Halloween, Homer's evil hammock produces an army of Homer clones;
     zombie cowboys threaten to destroy Springfield after Lisa outlaws guns; the Simpsons
     travel to an island inhabited by 'manimals.'
+  disneyplus_id:
   simpsonsworld_id: 221301315863
   good: true
   characters:
@@ -16,6 +17,7 @@ episodes:
   description: When a hidden camera tapes Homer lamenting that having a family meant
     kissing goodbye his dreams of becoming a rock 'n' roll star, Marge enrolls him
     a fantasy rock star camp run by The Rolling Stones.
+  disneyplus_id:
   simpsonsworld_id: 221293123693
   good: false
   characters:
@@ -25,6 +27,7 @@ episodes:
   episode: 3
   description: Bart and Lisa are horrified when they both end up in the same 3rd grade
     class.
+  disneyplus_id:
   simpsonsworld_id: 221347395722
   good: true
   characters:
@@ -34,6 +37,7 @@ episodes:
   description: Marge's life changes dramatically when her attempt to lose weight via
     surgery resulting in larger breasts; Bart and Milhouse get into mischief that
     leads to a public relations nightmare for Krusty.
+  disneyplus_id:
   simpsonsworld_id: 221352515586
   good: false
   characters:
@@ -47,6 +51,7 @@ episodes:
   description: When the Simpson house undergoes fumigation, the family is forced to
     seek shelter elsewhere... and ends up participating in a reality TV program set
     in a house from the 1800s.
+  disneyplus_id:
   simpsonsworld_id: 221388355650
   good: false
   characters:
@@ -56,6 +61,7 @@ episodes:
   episode: 6
   description: When someone attempts to murder Homer, Sideshow Bob is released from
     prison to help identify the culprit before he strikes again.
+  disneyplus_id:
   simpsonsworld_id: 221467203550
   good: false
   characters:
@@ -67,6 +73,7 @@ episodes:
   description: When Bart gets Mrs. Krabappel nominated for Teacher of the Year, the
     family heads for Orlando to attend the ceremony.  But Skinner fears he may lose
     Krabappel forever... and asks Bart to sabotage the affair.
+  disneyplus_id:
   simpsonsworld_id: 221467715532
   good: true
   characters:
@@ -77,6 +84,7 @@ episodes:
   episode: 8
   description: Homer hires a shady private investigator to spy on Lisa when he realizes
     he doesn't know very much about his daughter.
+  disneyplus_id:
   simpsonsworld_id: 221531715548
   good: true
   characters:
@@ -87,6 +95,7 @@ episodes:
   episode: 9
   description: When Marge is mugged at the Kwik-E-Mart, she develops agoraphobia and
     ends up living in the basement... until she turns into a fearless bodybuilder.
+  disneyplus_id:
   simpsonsworld_id: 221532739689
   good: false
   characters:
@@ -97,6 +106,7 @@ episodes:
   description: Inspired by Ned Flanders, Homer turns to prayer in hopes of changing
     his lot in life.  But when he injures himself coming out of church, Homer sues
     for damages... and is awarded the church itself.
+  disneyplus_id:
   simpsonsworld_id: 221526595805
   good: false
   characters:
@@ -107,6 +117,7 @@ episodes:
   description: When Bart discovers the existence of an embarrassing TV commercial
     he appeared in as a baby-and that Homer spent the money he earned-he sues for
     emancipation and moves out of the house.
+  disneyplus_id:
   simpsonsworld_id: 221696067841
   good: false
   characters:
@@ -118,6 +129,7 @@ episodes:
   description: When Lisa becomes a finalist in a spelling bee, she's offered a college
     scholarship in exchange for losing; Homer falls hopelessly in love with Krustyburger's
     limited-time-only rib sandwich.
+  disneyplus_id:
   simpsonsworld_id: 221698627830
   good: false
   characters:
@@ -129,6 +141,7 @@ episodes:
   description: A Hollywood movie star takes a romantic interest in Ned Flanders, and
     when the relationship blossoms, Ned's faith is put to the test when the star wants
     to have premarital sex.
+  disneyplus_id:
   simpsonsworld_id: 221695043703
   good: false
   characters:
@@ -139,6 +152,7 @@ episodes:
   description: When Springfield Airport changes the flight paths of airplanes, sending
     them over the Simpson's house, the family convinces Krusty to run for congress
     so he can change the law.
+  disneyplus_id:
   simpsonsworld_id: 221699651686
   good: true
   characters:
@@ -150,6 +164,7 @@ episodes:
   description: On Valentine's Day, Homer attends a college course on how to succeed
     in the corporate world, he becomes the owner of the power plant and fires Mr.
     Burns... only to realize that running the plant means being away from family.
+  disneyplus_id:
   simpsonsworld_id: 221696067982
   good: true
   characters:
@@ -161,6 +176,7 @@ episodes:
   description: As a British filmmaker makes a documentary about Springfield Elementary,
     Lisa tires to save the nighttime sky from light pollution, while Bart attempts
     to restore his coolness by obtaining a hood ornament from Fat Tony's car.
+  disneyplus_id:
   simpsonsworld_id: 221700675635
   good: false
   characters:
@@ -171,6 +187,7 @@ episodes:
   episode: 17
   description: Homer moves in with a gay couple after discovering a letter Marge wrote
     years earlier that implies she resents him.
+  disneyplus_id:
   simpsonsworld_id: 221699139984
   good: false
   characters:
@@ -182,6 +199,7 @@ episodes:
   description: While vacationing at a dude ranch, Lisa falls for a cute 13-year-old
     cowboy; Homer vows to stop beavers who've dammed a river and kept Native Americans
     from their land.
+  disneyplus_id:
   simpsonsworld_id: 221700163549
   good: false
   characters:
@@ -192,6 +210,7 @@ episodes:
   episode: 19
   description: When Santa's Little Helper becomes Duff Beer's new, highly-paid mascot,
     his original owner comes out of the woodwork and claims the dog belongs to him.
+  disneyplus_id:
   simpsonsworld_id: 221701187546
   good: false
   characters:
@@ -202,6 +221,7 @@ episodes:
   description: When Homer loses his driver's license, he embraces walking.  But Marge
     begins to suffer from stress when the pressure of being the only full-time driver
     in the house takes its toll-and ends up running Homer over in her car.
+  disneyplus_id:
   simpsonsworld_id: 229724227970
   good: false
   characters:
@@ -213,6 +233,7 @@ episodes:
   description: After police discover Bart and Milhouse ransacking Flanders' Beatles
     memorabilia, Marge decides to place her son in a supervised activity, the Pre-Teen
     Braves.
+  disneyplus_id:
   simpsonsworld_id: 229731395601
   good: false
   characters:
@@ -223,6 +244,7 @@ episodes:
   description: When Moe saves baby Maggie's life, a close bond forms.  But when Maggie
     wanders off with some gangsters, Homer and Marge mistakenly believe that Moe is
     responsible for the baby's disappearance.
+  disneyplus_id:
   simpsonsworld_id: 228412483812
   good: true
   characters:
