--- a/episodes/season_18.yml
+++ b/episodes/season_18.yml
@@ -6,6 +6,7 @@ episodes:
   description: Lisa befriends the son of mobster Fat Tony, whose dream is to become
     a chef; Homer and Bart take over the 'family business' after Fat Tony is gunned
     down.
+  disneyplus_id:
   simpsonsworld_id: 292959299559
   good: false
   characters:
@@ -18,6 +19,7 @@ episodes:
   episode: 2
   description: Lisa grows jealous after Bart discovers he's a talented jazz drummer;
     Lisa hides some stray animals in the attic.
+  disneyplus_id:
   simpsonsworld_id: 283202115995
   good: false
   characters:
@@ -29,6 +31,7 @@ episodes:
   description: Marge starts her own carpentry business, only to discover that men
     don't trust a woman to do the job; Bart discovers that Skinner is allergic to
     peanuts.
+  disneyplus_id:
   simpsonsworld_id: 283760707876
   good: false
   characters:
@@ -42,6 +45,7 @@ episodes:
   description: 'The Simpsons appear in three tales of horror: Homer turns into a rampaging
     blob; a creature from Jewish folklore does Bart''s bidding; a radio broadcast
     convinces townspeople they''re being invaded by aliens.'
+  disneyplus_id:
   simpsonsworld_id: 302871107984
   good: false
   characters:
@@ -52,6 +56,7 @@ episodes:
   description: After Homer joins the Army, he's selected to play an enemy target during
     war games.  When the Army chases Homer into town, it pits the people of Springfield
     against the military.
+  disneyplus_id:
   simpsonsworld_id: 283080259896
   good: false
   characters:
@@ -61,6 +66,7 @@ episodes:
   episode: 6
   description: Lisa helps Moe get a poem published, but is deeply hurt when Moe refuses
     to acknowledge her contribution.
+  disneyplus_id:
   simpsonsworld_id: 307167299594
   good: false
   characters:
@@ -71,6 +77,7 @@ episodes:
   episode: 7
   description: Homer finds happiness after he buys an ice cream truck; Marge finds
     her purpose in life when she makes sculptures out of popsicle sticks.
+  disneyplus_id:
   simpsonsworld_id: 292941379558
   good: maybe
   characters:
@@ -79,6 +86,7 @@ episodes:
   episode: 8
   description: Bart becomes Nelson's best friend; Homer becomes hooked on one of Lisa's
     fantasy books.
+  disneyplus_id:
   simpsonsworld_id: 279785027791
   good: maybe
   characters:
@@ -87,6 +95,7 @@ episodes:
   episode: 9
   description: During the Christmas holiday, Marge attempts to muster the wherewithal
     to kick down-on-his-luck Gil out of the house.
+  disneyplus_id:
   simpsonsworld_id: 279793731867
   good: maybe
   characters:
@@ -96,6 +105,7 @@ episodes:
   description: Marge returns to an island where she joyfully spent some of her childhood
     summers; Homer is forced to work on a fishing vessel that's threatened by a huge
     storm.
+  disneyplus_id:
   simpsonsworld_id: 283764803572
   good: maybe
   characters:
@@ -105,6 +115,7 @@ episodes:
   description: The Simpsons spin three tales of revenge; Homer appears as the Count
     of Monte Cristo; Milhouse uses a gadget to get even with kids who've picked on
     him; comic hero Bart-Man searches for the villain who killed his parents.
+  disneyplus_id:
   simpsonsworld_id: 283790915851
   good: true
   characters:
@@ -114,6 +125,7 @@ episodes:
   description: As Multicultural Day approaches, Lisa invents her own Native American
     heritage; after saving Springfield from a fire, Bart is rewarded with a driver's
     license-and ends up with a pregnant girlfriend who wants to wed.
+  disneyplus_id:
   simpsonsworld_id: 310462531619
   good: maybe
   characters:
@@ -123,6 +135,7 @@ episodes:
   description: In this spoof of the 'Up' documentaries, a filmmaker chronicles the
     lives of a group of Springfield residents, including Homer, who has seemingly
     made good on his quest to become a millionaire.
+  disneyplus_id:
   simpsonsworld_id: 302876739533
   good: maybe
   characters:
@@ -132,6 +145,7 @@ episodes:
   description: Lisa tutors Cletus's children - until Krusty hires them as a novelty
     act for his television show; Bart sees a female therapist after he's caught frightening
     his classmates with a scary story.
+  disneyplus_id:
   simpsonsworld_id: 307175491532
   good: maybe
   characters:
@@ -140,6 +154,7 @@ episodes:
   episode: 15
   description: Homer is horrified when his father begins dating Selma; Bart and Lisa
     build a fort after acquiring a large quantity of empty cardboard boxes.
+  disneyplus_id:
   simpsonsworld_id: 302868035943
   good: false
   characters:
@@ -153,6 +168,7 @@ episodes:
   episode: 16
   description: Homer tries his hand at making money by photographing celebrities and
     selling the images to the tabloids.
+  disneyplus_id:
   simpsonsworld_id: 292962371807
   good: false
   characters:
@@ -163,6 +179,7 @@ episodes:
   episode: 17
   description: After discovering the Internet, Marge becomes a character in a popular
     online fantasy game; Homer referees Lisa's soccer team.
+  disneyplus_id:
   simpsonsworld_id: 277036099916
   good: maybe
   characters:
@@ -172,6 +189,7 @@ episodes:
   description: Bart becomes the shame of Springfield after a bungle on the playing
     field causes the Isotots to lose a pennant game; Homer and Marge fight Reverend
     Lovejoy and his wife over possession of Homer's mattress.
+  disneyplus_id:
   simpsonsworld_id: 279798851587
   good: maybe
   characters:
@@ -180,6 +198,7 @@ episodes:
   episode: 19
   description: Homer and his friends join the volunteer fire department, only to begin
     stealing from fire victims.
+  disneyplus_id:
   simpsonsworld_id: 310491203943
   good: maybe
   characters:
@@ -188,6 +207,7 @@ episodes:
   episode: 20
   description: When Santa's Little Helper gets a job on the police force, Bart buys
     a python to replace him.
+  disneyplus_id:
   simpsonsworld_id: 302865987860
   good: maybe
   characters:
@@ -197,6 +217,7 @@ episodes:
   description: In this spoof of the television series '24,' Bart attempts to stop
     Jimbo, Dolph and Kearney before they unleash a deadly stink bomb at an upcoming
     school bake sale.
+  disneyplus_id:
   simpsonsworld_id: 292963907577
   good: maybe
   characters:
@@ -205,6 +226,7 @@ episodes:
   episode: 22
   description: Kent Brockman accidentally utters an obscenity during a news broadcast,
     leading to a heavy fine from the FCC - and costing Brockman his job.
+  disneyplus_id:
   simpsonsworld_id: 302859843984
   good: maybe
   characters:
