--- a/episodes/season_20.yml
+++ b/episodes/season_20.yml
@@ -5,6 +5,7 @@ episodes:
   episode: 1
   description: Homer and Flanders team-up as bounty hunters; Marge makes confections
     for an erotic bakery.
+  disneyplus_id:
   simpsonsworld_id: 311088195682
   good: true
   characters:
@@ -17,6 +18,7 @@ episodes:
   description: When Bart steals actor Denis Leary's cell phone, Marge uses its built-in
     GPS signal to track her son... leading the family to the ancient ruins of Machu
     Picchu.
+  disneyplus_id:
   simpsonsworld_id: 304458307742
   good: false
   characters:
@@ -27,6 +29,7 @@ episodes:
   episode: 3
   description: Bart swaps places with his exact double-unaware that the double's wealthy
     siblings are plotting murder.
+  disneyplus_id:
   simpsonsworld_id: 304460355919
   good: maybe
   characters:
@@ -36,6 +39,7 @@ episodes:
   description: On Halloween... Transformer-like robots duke it out in Springfield;
     Homer kills off celebrities so their likenesses can be exploited; the Simpsons
     appear in a spoof of a 'Peanuts' Halloween special.
+  disneyplus_id:
   simpsonsworld_id: 691895363987
   good: false
   characters:
@@ -46,6 +50,7 @@ episodes:
   description: In a series of flashbacks... Homer and Marge end up in a cabin in the
     woods with newlyweds Flanders and Maude; Homer and Marge's marriage is nearly
     ruined when they meet exciting new people during a party.
+  disneyplus_id:
   simpsonsworld_id: 311675459549
   good: maybe
   characters:
@@ -54,6 +59,7 @@ episodes:
   episode: 6
   description: When Lisa discovers a talent for solving crossword puzzles, she enters
     a crossword tournament-unaware that Homer bet against her.
+  disneyplus_id:
   simpsonsworld_id: 310541891517
   good: false
   characters:
@@ -64,6 +70,7 @@ episodes:
   episode: 7
   description: Homer thinks Bart's new Muslim friend belongs to a family of terrorists;
     Lisa acquires her first iPod-like device.
+  disneyplus_id:
   simpsonsworld_id: 310498883779
   good: maybe
   characters:
@@ -72,6 +79,7 @@ episodes:
   episode: 8
   description: As Lisa tries to find a habitat for endangered bees, Mr. Burns builds
     a state-of-the-art sports arena-which happens to look like a giant hive.
+  disneyplus_id:
   simpsonsworld_id: 310506051725
   good: true
   characters:
@@ -82,6 +90,7 @@ episodes:
   episode: 9
   description: Lisa's new best friend creates a fantasy world so real it threatens
     to drive them apart.
+  disneyplus_id:
   simpsonsworld_id: 292944963870
   good: maybe
   characters:
@@ -91,6 +100,7 @@ episodes:
   description: When Homer discovers that he was almost elected class president in
     high school, an old Italian cook uses a magic pot of tomato sauce to show him
     an alternate version of his life.
+  disneyplus_id:
   simpsonsworld_id: 273728067781
   good: maybe
   characters:
@@ -100,6 +110,7 @@ episodes:
   description: Lisa freezes during a federal school assessment test; Homer tries to
     prevent accidents from happening after he forgets to pay an insurance bill; Skinner
     accompanies Bart and other underachievers on a trip to Capital City.
+  disneyplus_id:
   simpsonsworld_id: 277134915702
   good: maybe
   characters:
@@ -109,6 +120,7 @@ episodes:
   description: When Homer and Marge's adjustable mortgage rate skyrockets, they're
     forced to move out of the house... until Flanders purchases the property and becomes
     their landlord.
+  disneyplus_id:
   simpsonsworld_id: 273029699673
   good: maybe
   characters:
@@ -117,6 +129,7 @@ episodes:
   episode: 13
   description: In this 'National Treasure'-like story... when Maggie disappears at
     a convent, Lisa goes undercover as a nun to solve a mystery involving a rare jewel.
+  disneyplus_id:
   simpsonsworld_id: 273030211958
   good: maybe
   characters:
@@ -125,6 +138,7 @@ episodes:
   episode: 14
   description: The Simpsons travel to Ireland, where Homer and Grampa purchase an
     old pub that's fallen on hard times.
+  disneyplus_id:
   simpsonsworld_id: 307849283838
   good: maybe
   characters:
@@ -134,6 +148,7 @@ episodes:
   description: When their marriage license turns out to be invalid, Homer asks Marge
     to marry him in style.  But when Homer mysteriously disappears just before the
     wedding, Bart and Lisa search for answers.
+  disneyplus_id:
   simpsonsworld_id: 273024579646
   good: maybe
   characters:
@@ -142,6 +157,7 @@ episodes:
   episode: 16
   description: Moe meets a beautiful woman in an Internet chat room who turns out
     to be three feet tall; Homer tries to spend more time with Maggie.
+  disneyplus_id:
   simpsonsworld_id: 273066051746
   good: maybe
   characters:
@@ -151,6 +167,7 @@ episodes:
   description: Bart dumps Milhouse in favor of a cute girl who volunteers her time
     at the retirement home; Lisa is prescribed antidepressants after she reads predictions
     about what Springfield will look like in 50 years.
+  disneyplus_id:
   simpsonsworld_id: 273057347598
   good: maybe
   characters:
@@ -160,6 +177,7 @@ episodes:
   description: As a result of Homer's "helicopter parenting," Lisa employs a trendy
     technique for boosting her popularity, while Bart enters a balsa-wood model-building
     contest; Marge discovers a sauna in the basement.
+  disneyplus_id:
   simpsonsworld_id: 273070659848
   good: maybe
   characters:
@@ -168,6 +186,7 @@ episodes:
   episode: 19
   description: Homer and Marge rent an apartment in tony Waverly Hills so Bart and
     Lisa can attend a better elementary school.
+  disneyplus_id:
   simpsonsworld_id: 299732035764
   good: maybe
   characters:
@@ -176,6 +195,7 @@ episodes:
   episode: 20
   description: 'As Marge and Lisa have their nails done, they spin four tales involving
     famous women: Queen Elizabeth, Snow White, Lady Macbeth and Ayn Rand.'
+  disneyplus_id:
   simpsonsworld_id: 273732163923
   good: maybe
   characters:
@@ -184,6 +204,7 @@ episodes:
   episode: 21
   description: Springfield grapples with an immigration problem when the economy of
     nearby Ogdenville collapses.
+  disneyplus_id:
   simpsonsworld_id: 729848899646
   good: maybe
   characters:
