--- a/episodes/season_24.yml
+++ b/episodes/season_24.yml
@@ -6,6 +6,7 @@ episodes:
   description: Bart seeks out Cletus's daughter, who has started a new life in New
     York City, Lisa wants to take in a Broadway play but ends up performing Shakespeare
     in Central Park.
+  disneyplus_id:
   simpsonsworld_id: 221691971633
   good: maybe
   characters:
@@ -15,6 +16,7 @@ episodes:
   description: In these three Halloween tales... a black hole threatens to destroy
     Springfield; the Simpsons are terrorized by the unknown in a spoof of 'Paranormal
     Activity'; Bart time travels in a spoof of 'Back to the Future.'
+  disneyplus_id:
   simpsonsworld_id: 221695555645
   good: true
   characters:
@@ -24,6 +26,7 @@ episodes:
   episode: 3
   description: Marge decides she wants to conceive another child; Bart realizes Lisa
     is up to something mysterious and vows to find out what it is.
+  disneyplus_id:
   simpsonsworld_id: 221688899646
   good: maybe
   characters:
@@ -32,6 +35,7 @@ episodes:
   episode: 4
   description: Homer and Marge search for Grampa after he disappears from the retirement
     home; Homer invests Lisa's college fund in an online poker Web site.
+  disneyplus_id:
   simpsonsworld_id: 221688899887
   good: maybe
   characters:
@@ -40,6 +44,7 @@ episodes:
   episode: 5
   description: While serving jury duty, Fat Tony appoints an accountant as his temporary
     Don; an anemic Lisa eats bugs to increase her iron level.
+  disneyplus_id:
   simpsonsworld_id: 221694531617
   good: maybe
   characters:
@@ -49,6 +54,7 @@ episodes:
   description: After his beloved new tablet "MyPad" computer is destroyed, a despondent
     Homer finds solace in a message seemingly written by God - until newsman Kent
     Brockman sets out to debunk the "miracle."
+  disneyplus_id:
   simpsonsworld_id: 229733443727
   good: maybe
   characters:
@@ -57,6 +63,7 @@ episodes:
   episode: 7
   description: Homer is elated when a cool dad and his family move next door, but
     his happiness ends when he realizes he has little in common with his new neighbors.
+  disneyplus_id:
   simpsonsworld_id: 222374467937
   good: maybe
   characters:
@@ -66,6 +73,7 @@ episodes:
   description: When Bart accuses Homer of not liking Santa's Little Helper, Grampa
     recounts the story of how Homer's heart broke after he was forced to give away
     his childhood dog.
+  disneyplus_id:
   simpsonsworld_id: 222491715618
   good: maybe
   characters:
@@ -74,6 +82,7 @@ episodes:
   episode: 9
   description: The Simpsons anticipate the apocalypse after Homer inadvertently triggers
     a shockwave that disables all electronic devices in Springfield.
+  disneyplus_id:
   simpsonsworld_id: 1094312515873
   good: maybe
   characters:
@@ -82,6 +91,7 @@ episodes:
   episode: 10
   description: Bart must pass a district-wide test to save Springfield Elementary;
     Homer uses a discarded parking meter to steal from unsuspecting drivers.
+  disneyplus_id:
   simpsonsworld_id: 222388291945
   good: maybe
   characters:
@@ -90,6 +100,7 @@ episodes:
   episode: 11
   description: After narrowly surviving a tornado, Marge and Homer embark on a search
     for a couple who'll serve as Bart, Lisa and Maggie's legal guardians.
+  disneyplus_id:
   simpsonsworld_id: 257684035668
   good: maybe
   characters:
@@ -98,6 +109,7 @@ episodes:
   episode: 12
   description: Bart attempts to patch things up with his old sweetheart, Mary Spuckler,
     and despite Lisa's input, still manages to sabotage his chances of finding love.
+  disneyplus_id:
   simpsonsworld_id: 257681987573
   good: maybe
   characters:
@@ -106,6 +118,7 @@ episodes:
   episode: 13
   description: With Bart's help, Milhouse transforms into his father; Homer discovers
     a talent for finding things in hidden-picture books.
+  disneyplus_id:
   simpsonsworld_id: 257686595928
   good: maybe
   characters:
@@ -115,6 +128,7 @@ episodes:
   description: With encouragement from Mr. Burns, Grampa revives a famous wrestling
     character from his past whom audiences love to hate, and despite Homer and Marge's
     objections, incorporates Bart into the act.
+  disneyplus_id:
   simpsonsworld_id: 257687107857
   good: maybe
   characters:
@@ -124,6 +138,7 @@ episodes:
   description: When Flanders gives Homer a black eye, he turns to the Bible for answers;
     Lisa is shocked and puzzled when she discovers that a substitute teacher hates
     her.
+  disneyplus_id:
   simpsonsworld_id: 257689667578
   good: maybe
   characters:
@@ -133,6 +148,7 @@ episodes:
   description: Bart stands trial in youth court after he's accused of pulling an Easter
     prank; after buying a comic book collection, Mr. Burns transforms into a 'Batman'-like
     superhero.
+  disneyplus_id:
   simpsonsworld_id: 257714243647
   good: maybe
   characters:
@@ -141,6 +157,7 @@ episodes:
   episode: 17
   description: In an episode that focuses on the choices people make and their outcomes...
     Homer attempts to save his marriage; Milhouse woos Lisa.
+  disneyplus_id:
   simpsonsworld_id: 1094243907551
   good: maybe
   characters:
@@ -149,6 +166,7 @@ episodes:
   episode: 18
   description: Lovejoy quits the church after the Parson appoints a charismatic reverend
     to reinvigorate the parish; Marge tracks down her old wedding dress.
+  disneyplus_id:
   simpsonsworld_id: 257728579751
   good: maybe
   characters:
@@ -158,6 +176,7 @@ episodes:
   description: Moe's new suit catches the attention of venture capitalists, leading
     to the distribution of Moe's own brand of whiskey; Bart cares for Grampa; Lisa
     realizes that her favorite musicians have been turned into holograms.
+  disneyplus_id:
   simpsonsworld_id: 257737283653
   good: maybe
   characters:
@@ -166,6 +185,7 @@ episodes:
   episode: 20
   description: Bart takes piano lessons in hopes of impressing his beautiful young
     teacher; Homer goes completely bald; Marge teaches a Russian man how to drive.
+  disneyplus_id:
   simpsonsworld_id: 257760323921
   good: maybe
   characters:
@@ -174,6 +194,7 @@ episodes:
   episode: 21
   description: Homer, Moe and Lenny travel to Iceland to retrieve lottery winnings
     that Carl ran off with.
+  disneyplus_id:
   simpsonsworld_id: 257753667515
   good: maybe
   characters:
@@ -182,6 +203,7 @@ episodes:
   episode: 22
   description: Homer secretly reconstructs a kiddy train as Marge's anniversary present;
     Marge attracts the attention of a potential paramour online.
+  disneyplus_id:
   simpsonsworld_id: 257768003795
   good: maybe
   characters:
