--- a/episodes/season_28.yml
+++ b/episodes/season_28.yml
@@ -4,6 +4,7 @@ episodes:
   season: 28
   episode: 1
   description: Mr. Burns puts on a variety show at the Springfield Bowl.
+  disneyplus_id:
   simpsonsworld_id: 1066704963871
   good: false
   characters:
@@ -15,6 +16,7 @@ episodes:
   episode: 2
   description: Homer finds a new friend in a woman who acts just like him when Mr.
     Burns hires the other Simpsons as his live-in virtual reality family.
+  disneyplus_id:
   simpsonsworld_id: 1064038980002
   good: false
   characters:
@@ -26,6 +28,7 @@ episodes:
   episode: 3
   description: Homer takes the family on a "hate-cation" to Boston after he catches
     Bart rooting for a rival football team.
+  disneyplus_id:
   simpsonsworld_id: 1064043075512
   good: false
   characters:
@@ -36,6 +39,7 @@ episodes:
   description: The children of Springfield fight to the death, Hunger Games style;
     Lisa's imaginary friend kills her real friends; Moe recruits Bart into his group
     of covert barfly agents.
+  disneyplus_id:
   simpsonsworld_id: 1063870531930
   good: false
   characters:
@@ -45,6 +49,7 @@ episodes:
   episode: 5
   description: Bart and Lisa investigate Krusty's new candy; Marge helps Homer dress
     for a promotion; Kent Brockman struggles with the changing media world.
+  disneyplus_id:
   simpsonsworld_id: 1064042051872
   good: maybe
   characters:
@@ -53,6 +58,7 @@ episodes:
   episode: 6
   description: Homer coaches the kids' lacrosse team with Kirk Van Houten, who disappears
     before the championship game, after Homer rants about him being a loser.
+  disneyplus_id:
   simpsonsworld_id: 1064041539874
   good: maybe
   characters:
@@ -61,6 +67,7 @@ episodes:
   episode: 7
   description: The Simpsons go to Cuba to get Grampa cheap medical care when the Retirement
     Castle and V.A. hospital are unable to solve his health problems.
+  disneyplus_id:
   simpsonsworld_id: 1064044099513
   good: maybe
   characters:
@@ -69,6 +76,7 @@ episodes:
   episode: 8
   description: Homer discovers an app that makes his life easier, while Grampa learns
     that he'll be a father again.
+  disneyplus_id:
   simpsonsworld_id: 1064046147533
   good: maybe
   characters:
@@ -78,6 +86,7 @@ episodes:
   description: Homer is placed in a cast following a workplace accident, leading Marge
     to receive romance from an unexpected source; Lisa attempts to keep the peace
     as bus monitor.
+  disneyplus_id:
   simpsonsworld_id: 1064046147517
   good: maybe
   characters:
@@ -86,6 +95,7 @@ episodes:
   episode: 10
   description: Krusty and his daughter spend Christmas with the Simpsons; Reverend
     Lovejoy seeks converts to boost attendance at church; A Christmas toy scares Maggie.
+  disneyplus_id:
   simpsonsworld_id: 1064045635565
   good: maybe
   characters:
@@ -94,6 +104,7 @@ episodes:
   episode: 11
   description: A Japanese book on minimalism inspires Marge to adapt to a new way
     of living, so the Simpsons have to part with items that no longer bring them joy.
+  disneyplus_id:
   simpsonsworld_id: 1070436931706
   good: maybe
   characters:
@@ -103,6 +114,7 @@ episodes:
   description: When all the fast food restaurants in Springfield become healthy, Homer
     turns to the last bastion of greasy food for comfort; Lisa must find a good news
     story when her school radio station is in jeopardy.
+  disneyplus_id:
   simpsonsworld_id: 1064044611770
   good: maybe
   characters:
@@ -111,6 +123,7 @@ episodes:
   episode: 15
   description: Bart deals with his guilt of betraying Lisa; Homer is revealed to be
     a master chess player.
+  disneyplus_id:
   simpsonsworld_id: 1064044611752
   good: maybe
   characters:
@@ -119,6 +132,7 @@ episodes:
   episode: 16
   description: Bart and Lisa return home following a traumatic incident at Kamp Krusty,
     putting an end to Homer and Marge's sexual encounters.
+  disneyplus_id:
   simpsonsworld_id: 1064043587996
   good: maybe
   characters:
@@ -126,6 +140,7 @@ episodes:
   season: 28
   episode: 17
   description: Bart becomes a star basketball player at Springfield Elementary.
+  disneyplus_id:
   simpsonsworld_id: 1064044099732
   good: maybe
   characters:
@@ -134,6 +149,7 @@ episodes:
   episode: 18
   description: As Homer and Marge try a different parenting style on Bart, Grampa
     gives him a special watch.
+  disneyplus_id:
   simpsonsworld_id: 1064046659528
   good: maybe
   characters:
@@ -142,6 +158,7 @@ episodes:
   episode: 19
   description: Mr. Burns starts his own for-profit university and hires Homer as a
     professor.
+  disneyplus_id:
   simpsonsworld_id: 1064044611790
   good: maybe
   characters:
@@ -149,6 +166,7 @@ episodes:
   season: 28
   episode: 20
   description: Bart befriends the grandmothers of Springfield.
+  disneyplus_id:
   simpsonsworld_id: 1064046659522
   good: maybe
   characters:
@@ -156,6 +174,7 @@ episodes:
   season: 28
   episode: 21
   description: Moe helps Homer and Marge work on their marriage.
+  disneyplus_id:
   simpsonsworld_id: 1064045635817
   good: maybe
   characters:
@@ -163,6 +182,7 @@ episodes:
   season: 28
   episode: 22
   description: The dogs of Springfield assert their dominance.
+  disneyplus_id:
   simpsonsworld_id: 1064045635799
   good: maybe
   characters:
@@ -172,6 +192,7 @@ episodes:
   description: Mr. Burns tries to relive his glory days, and crosses paths with a
     mysterious music mogul. After being conned by him and reduced to bankruptcy, Mr.
     Burns seeks revenge on the music producer.
+  disneyplus_id:
   simpsonsworld_id: 1077274179891
   good: maybe
   characters:
